--- a/site/app/views/layouts/simple.html.haml
+++ b/site/app/views/layouts/simple.html.haml
@@ -24,7 +24,7 @@
         .container
           %div
             .row.row-flush-right
-              .offset2.column-content.lift-less.span-wrapper
+              .offset2.column-content.lift-less.grid-wrapper
                 .span8.span-flush-right
                   = flashes
                   = yield
