--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -21,11 +21,19 @@
               %strong> Open
               Shift
         %ul.nav
-          %li.active= link_to "Learn More", "."
-          %li= link_to "Documentation", "dev_center"
+          %li.active
+            = link_to "." do
+              %span Learn More
+          %li
+            = link_to "dev_center" do
+              %span Documentation
           %li.divider &nbsp;
-          %li= link_to "Console", "console"
-          %li= link_to "Community", "community"
+          %li
+            = link_to "console" do
+              %span Console
+          %li
+            = link_to "community" do
+              %span Community
 
     .messaging
       .container
@@ -38,7 +46,7 @@
   .container
     .row-content
       .row.row-flush-right
-        .column-nav.lift-less.span-wrapper
+        .column-nav.lift-less.grid-wrapper
           .span3
             .gutter-right
               .nav-location.headline Community
@@ -66,7 +74,7 @@
                   %input.search-query
                   %button.search{:type => 'submit'} 
         
-        .column-content.lift.span-wrapper
+        .column-content.lift.grid-wrapper
           .span9.span-flush-right
             %h1.ribbon
               OpenShift Blog
