--- a/site/app/views/user/request_password_reset_form.html.haml
+++ b/site/app/views/user/request_password_reset_form.html.haml
@@ -1,8 +1,4 @@
-- input_html = { :class => input_class } if defined? input_class
-
-%h1.ribbon
-  .ribbon-content Reset your password
-  .ribbon-left
+- content_for :ribbon, 'Reset your password'
 
 #password-reset-form
   = form_tag(user_request_password_reset_path, :class => 'form-horizontal') do
