Add text comments from yesterday

--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
         Develop and Scale 
         %strong#technology-rotate Apps
         in the Cloud
-      %h2.secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
+      %h2.secondary OpenShift is Red Hat's free, auto-scaling Platform as a Service (PaaS) for applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
 
 - content_for :javascripts do
   = javascript_include_tag "/app/javascripts/twitter.branding.js"
