--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -8,7 +8,7 @@
 
 = render :partial => @application_type, :locals => {:hide_link => true, :extra_info => true}
 
-= semantic_form_for @application, :html => {:class => 'form-horizontal'} do |f|
+= semantic_form_for @application, :url => application_type_path(@application_type.id), :html => {:class => 'form-horizontal'} do |f|
   = f.hidden_field :application_type, :value => @application_type.id
 
   = f.semantic_errors :name, :domain_name
@@ -49,8 +49,19 @@
               %strong Namespace
               %p
                 Because this is your first application, you need to set a name under which your applications will be grouped.
+    .control-group
+      %label.control-label Gear Size
+      .controls
+        = f.input :node_profile, :collection => @gear_sizes
+        .row
+          .help-block.span6
+            Different gear sizes may be available for your application.  For most
+            application the
+            %strong small
+            gear size provides plenty of resources to run in.  If you require
+            more resources you may change it here.
 
   = f.buttons do
     = link_to "Back", application_types_path, :class => 'btn'
-    = f.commit_button
+    = f.commit_button :button_html => { :name => 'submit' } 
     = f.loading
