Fixed login_ajax_path missing

--- a/site/app/views/login/_signin_form.html.haml
+++ b/site/app/views/login/_signin_form.html.haml
@@ -1,5 +1,5 @@
 #login-form
-  = form_tag(login_ajax_path, :remote => true ) do
+  = form_tag(login_path, :remote => true ) do
     %input(type="hidden" value="✓" name="utf8")
     %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
     
