--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -3,9 +3,8 @@
 
 #login-form
   = form_tag(login_path, :class => 'form-horizontal') do
-    %input(type="hidden" value="✓" name="utf8")
-    %input{:type => "hidden", :value => form_authenticity_token, :name => "authenticity_token"}
-    %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/console') }
+    - if @redirectUrl.present?
+      %input{:type => "hidden", :name => "redirectUrl", :value => @redirectUrl }
     %fieldset
       .control-group
         %label.control-label{:for => 'login_input'}
