Videos expand outside their boundaries when on a small device, temporary hac^Hfix

--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -26,11 +26,11 @@
     
   .row
     .span4
-      = render 'product/video_embed', :video => 'express_client_tools', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'express_client_tools', :width => '', :height => 255
     .span4
-      = render 'product/video_embed', :video => 'express_create_app', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'express_create_app', :width => '', :height => 255
     .span4
-      = render 'product/video_embed', :video => 'express_deploy', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'express_deploy', :width => '', :height => 255
   .row
     .span4
       %h2
