--- a/site/app/views/product/flex.html.haml
+++ b/site/app/views/product/flex.html.haml
@@ -51,11 +51,11 @@
     
   .row
     .span4
-      = render 'product/video_embed', :video => 'flex_build_cluster', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'flex_build_cluster', :width => '', :height => 255
     .span4
-      = render 'product/video_embed', :video => 'flex_control_apps', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'flex_control_apps', :width => '', :height => 255
     .span4
-      = render 'product/video_embed', :video => 'flex_monitor_scale', :width => 311, :height => 255
+      = render 'product/video_embed', :video => 'flex_monitor_scale', :width => '', :height => 255
   .row
     .span4
       %h2
