--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -47,13 +47,13 @@ a:hover, a:active { color: $ribbonColor; }
   }
 }
 
-.offset-up {
-  position: relative;
+/* FIXME: For videos temporarily, replace with use of standard tile pattern and grid */
+.row iframe,
+.row-fluid iframe {
+  width: 100%;
+  max-width: 311px;
 }
-.offset-up > .offset-up {
-  position: absolute;
-  bottom: 50%;
-}
+
 
 /* A link that is a block, similar to a thumbnail */
 @mixin tile($activeColor, $hoverColor, $backgroundActiveColor, $backgroundHoverColor) {
