--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -8,10 +8,10 @@
 
 = render :partial => @application_type, :locals => {:hide_link => true, :extra_info => true}
 
-= semantic_form_for @application, :url => application_type_path(@application_type.id), :html => {:class => 'form-horizontal'} do |f|
+= semantic_form_for @application, :html => {:class => 'form-horizontal'} do |f|
   = f.hidden_field :application_type, :value => @application_type.id
 
-  = f.semantic_errors :name, :domain_name
+  = f.semantic_errors :name, :domain_name, :node_profile
 
   = f.inputs do
     -# This is implemented custom here rather than integrating into Formtastic because of its specific nature
@@ -48,12 +48,12 @@
                 URL. You can add your own domain names to the application later.
               %strong Namespace
               %p
-                Because this is your first application, you need to set a name under which your applications will be grouped.
+                Because this is your first application, you need to set a name under which your applications will be grouped
     .control-group
-      %label.control-label Gear Size
-      .controls
-        = f.input :node_profile, :collection => @gear_sizes
-        .row
+      %label{:for => :gear_size_profile, :class => "control-label"} Gear Size
+      = f.input :gear_size_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
+      .row
+        .controls
           .help-block.span6
             Different gear sizes may be available for your application.  For most
             application the
