--- a/site/app/views/product/getting_started_flex.html.haml
+++ b/site/app/views/product/getting_started_flex.html.haml
@@ -20,6 +20,9 @@
 %section#quickstart
   
   %p
+    Get more control over your apps, or move your existing applications to the cloud with ease! Flex is a dedicated cloud solution that provides everything you need to easily scale, provision, deploy, and monitor your applications.
+
+  %p
     Clicking on the link below will take you to the Flex application where you can start migrating your applications to the cloud. 
 
   - if logged_in?
