--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -105,7 +105,7 @@
     word-wrap: break-word;
     }
 section#app-cartridges .cartridge-block {
-	background: #f0f0f0 url("http://placehold.it/60&text=img") 15px 15px no-repeat;
+	background: #f0f0f0 ; //url("http://placehold.it/60&text=img") 15px 15px no-repeat;
 	margin-bottom: 15px;
 	}
 	section#app-cartridges .cartridge-block-overview {
