Added form validations

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -161,3 +161,7 @@ section#app-cartridges .cartridge-block {
 	background-color: #c0ddf3;
 	margin-bottom: 1px;
 	}
+
+#app-errors {
+  display: none
+}
