--- a/site/app/views/domains/_domain.html.haml
+++ b/site/app/views/domains/_domain.html.haml
@@ -1,9 +1,13 @@
-= semantic_form_for :domain, :url => domain_path, :html => {:class => 'form-inline control-group-important' } do |f|
-  .input-prepend-append
-    %span.add-on-first> http://applicationname&ndash;
-    = f.text_field :name, :autofocus => true, :placeholder => 'Namespace'
-    %span.add-on-last> .rhcloud.com
-  .help-block Your namespace must be letters or numbers with no spaces or symbols.
-  .btn-toolbar
-    = f.submit "Save", :class => 'btn btn-primary'
-    = f.loading
+#new_domain
+  = semantic_form_for :domain, :url => domain_path, :html => {:class => 'form-inline control-group-important' } do |f|
+    .input-prepend-append
+      %span.add-on-first> http://applicationname&ndash;
+      = f.text_field :name, :autofocus => true, :placeholder => 'Namespace', :class => "domain_name"
+      %span.add-on-last> .rhcloud.com
+    .row
+      #app-errors.span4.offset1
+        %ul.alert.alert-error.unstyled.errors
+    .help-block Your namespace must be letters or numbers with no spaces or symbols.
+    .btn-toolbar
+      = f.submit "Save", :class => 'btn btn-primary'
+      = f.loading
