--- a/site/app/views/domains/_form.html.haml
+++ b/site/app/views/domains/_form.html.haml
@@ -1,14 +1,15 @@
-= semantic_form_for domain, :url => domain_path, :simple => true, :html => {:class => 'form-inline'} do |f|
-  = f.semantic_errors
-  .control-group.control-group-important{:class => domain.errors[:namespace].present? ? 'error' : '', :id => "domain_name_group"}
-    .controls
-      .input-prepend-append
-        %span.add-on-first> http://applicationname&ndash;
-        = f.text_field :name, :autofocus => true, :placeholder => 'Namespace'
-        %span.add-on-last> .rhcloud.com
-      = f.inline_errors_for :namespace
-      .help-block Your namespace must be letters or numbers with no spaces or symbols.
-  = f.buttons do
-    = link_to "Cancel", account_path, :class => 'btn'
-    = f.commit_button :label => domain.persisted? ? 'Save' : 'Create'
-    = f.loading
+#new_domain
+  = semantic_form_for domain, :url => domain_path, :simple => true, :html => {:class => 'form-inline'} do |f|
+    = f.semantic_errors
+    .control-group.control-group-important{:class => domain.errors[:namespace].present? ? 'error' : '', :id => "domain_name_group"}
+      .controls
+        .input-prepend-append
+          %span.add-on-first> http://applicationname&ndash;
+          = f.text_field :name, :autofocus => true, :placeholder => 'Namespace'
+          %span.add-on-last> .rhcloud.com
+        = f.inline_errors_for :namespace
+        .help-block Your namespace must be letters or numbers with no spaces or symbols.
+    = f.buttons do
+      = link_to "Cancel", account_path, :class => 'btn'
+      = f.commit_button :label => domain.persisted? ? 'Save' : 'Create'
+      = f.loading
