--- a/site/public/stylesheets/console.css
+++ b/site/public/stylesheets/console.css
@@ -234,3 +234,8 @@ section#app-cartridges > header {
   background-color: #c0ddf3;
   margin-bottom: 1px;
 }
+
+/* line 165, ../../app/stylesheets/console.scss */
+#app-errors {
+  display: none;
+}
