Minor cleanup to the getting started content - Flex is bare enough that we should axe it

--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -13,9 +13,7 @@
   - else
     = take_action '/app/user/new/express', 'Sign up to try <strong>OpenShift Express</strong>'
 
-%h1.ribbon
-  .ribbon-content What is OpenShift Express?
-  .ribbon-left
+%h1.ribbon What is Express?
   
 %section
 
@@ -48,4 +46,4 @@
       %p
         Add your application code to the Git repository and push to the cloud. Congratulations, your application is live!
   
-  %section= take_action '/app/getting_started', 'Ready to Shift your App to the Cloud?', 'Read the Express Getting Started Guide'
+%section= take_action '/app/getting_started', 'Want to know more?', 'Read the Getting Started Guide'
