--- a/site/app/views/product/flex.html.haml
+++ b/site/app/views/product/flex.html.haml
@@ -13,9 +13,7 @@
   - else
     = take_action '/app/user/new/flex', 'Sign up to try <strong>OpenShift Flex</strong>'
 
-%h1.ribbon
-  .ribbon-content What is OpenShift Flex?
-  .ribbon-left
+%h1.ribbon What is Flex?
   
 %section
     
@@ -72,5 +70,3 @@
         Monitoring and Auto-Scaling Built-in
       %p
         Without the use of agents or scripts, OpenShift Flex gives you end-to-end monitoring straight-out-of-box with configurable auto-scaling that lets you decide when and how to scale your application.
-  
-  %section= take_action '/app/getting_started/flex', 'Ready to Shift your App to the Cloud?', 'Read the Flex Getting Started Guide'
