--- a/site/app/views/layouts/simple/_header.html.haml
+++ b/site/app/views/layouts/simple/_header.html.haml
@@ -1,9 +1,14 @@
-.navbar
-  .navbar-inner
+#top.section-top
+  .container
+
+%nav#nav{:class => 'section-nav' << content_for(:nav_class)}
+  .navbar
     .container
+      -# Was .nav-collapse, has some issues
+      .brand
+        = link_to root_path do
+          .brand-image
+          .brand-text
 
-      = link_to root_path, :class => 'brand' do
-        Open
-        %strong> Shift
-        %span.trademark> &trade;
-
+  - if content_for? :header
+    = yield :header
