mark the metrics cart as experimental and tag it in the UI

--- a/site/app/views/cartridge_types/_cartridge_type.html.haml
+++ b/site/app/views/cartridge_types/_cartridge_type.html.haml
@@ -2,6 +2,8 @@
 
   - if cartridge_type.categories.include? :installed
     %span.label.pull-right Installed
+  - if cartridge_type.categories.include? :experimental
+    %span.label.pull-right Experimental
 
   - if defined? reason
     - if reason == :requires
