--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -18,21 +18,25 @@
   Choose a cartridge to add to your application.
 
 .row
-  - @cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
-    .span4
-      = render :collection => types, :partial => 'cartridge_types/cartridge_type'
-  - @installed_cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
-    .span4
-      = render :collection => types, :partial => 'cartridge_types/cartridge_type',
-               :locals => {:hide_link => true}
-  - @requires_cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
-    .span4
-      = render :collection => types, :partial => 'cartridge_types/cartridge_type',
-               :locals => {:hide_link => true, :reason => :requires}
-  - @conflicts_cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
-    .span4
-      = render :collection => types, :partial => 'cartridge_types/cartridge_type',
-               :locals => {:hide_link => true, :reason => :conflicts}
+  - unless @cart_types.empty?
+    - @cart_types.each_slice((@cart_types.length/3.0).ceil).each do |types|
+      .span4
+        = render :collection => types, :partial => 'cartridge_types/cartridge_type'
+  - unless @installed_cart_types.empty?
+    - @installed_cart_types.each_slice((@installed_cart_types.length/3.0).ceil).each do |types|
+      .span4
+        = render :collection => types, :partial => 'cartridge_types/cartridge_type',
+                 :locals => {:hide_link => true}
+  - unless @requires_cart_types.empty?
+    - @requires_cart_types.each_slice((@requires_cart_types.length/3.0).ceil).each do |types|
+      .span4
+        = render :collection => types, :partial => 'cartridge_types/cartridge_type',
+                 :locals => {:hide_link => true, :reason => :requires}
+  - unless @conflicts_cart_types.empty?
+    - @conflicts_cart_types.each_slice((@conflicts_cart_types.length/3.0).ceil).each do |types|
+      .span4
+        = render :collection => types, :partial => 'cartridge_types/cartridge_type',
+                 :locals => {:hide_link => true, :reason => :conflicts}
 
 - content_for :javascripts do
   :javascript
