--- a/site/app/views/terms/new.html.haml
+++ b/site/app/views/terms/new.html.haml
@@ -3,37 +3,36 @@
 - content_for :page_title do
   Legal terms
 
-%section.main
-  %header
-    %h1
-      Legal terms
+%h1.ribbon
+  .ribbon-content Legal terms
+  .ribbon-left
   
-  .content
-    - @term.errors.each do |key, value|
-      - if key == :base
-        #errors
-          %p.inline-errors #{value}
+.content
+  - @term.errors.each do |key, value|
+    - if key == :base
+      #errors
+        %p.inline-errors #{value}
 
-    %h2 
-      Please Accept the Following Terms
+  %h2 
+    Please Accept the Following Terms
 
-    %p 
-      Before participating in the OpenShift Preview Program and receiving the Preview Services, Preview Software and access to online properties, you need to accept certain terms and conditions. The link below contains a list of the terms that will apply to your use.
-    
-    = link_to 'OpenShift Legal Terms and Conditions', acceptance_terms_path, :class => 'more', :target => "_blank"
-    
-    %p
-      Clicking <strong>I accept</strong> means that you agree to the above terms.
-    
-    = render 'layouts/flashes'
+  %p 
+    Before participating in the OpenShift Preview Program and receiving the Preview Services, Preview Software and access to online properties, you need to accept certain terms and conditions. The link below contains a list of the terms that will apply to your use.
+  
+  = link_to 'OpenShift Legal Terms and Conditions', acceptance_terms_path, :class => 'more', :target => "_blank"
+  
+  %p
+    Clicking <strong>I accept</strong> means that you agree to the above terms.
+  
+  = render 'layouts/flashes'
 
-    = semantic_form_for @term do |form|
-      = form.inputs do
-        - if @show_captcha
-          %li.captcha
-            %p 
-              Please verify that you are human:
-            = recaptcha_tags :ssl => true
-          
-      = form.buttons do
-        = form.commit_button "I Accept", :button_html => { :class => 'button' }
+  = semantic_form_for @term, :simple => true do |form|
+    = form.inputs do
+      - if @show_captcha
+        .control-group
+          %label.control-label(for="recaptcha_response_field")
+            Are you human?
+          .controls.recaptcha
+            = recaptcha_tags :ssl => true 
+    = form.buttons do
+      = form.commit_button "I Accept", :button_html => { :class => 'btn btn-primary' }
